# PromptForge

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 4070df012230_create_prompts_prompt_versions_labels.py  a1c9e7b35d82_create_composition_edges.py  a3d7f1e9c802_create_security_scans.py  a9f3c1d7e205_broaden_audit_trail.py  b2c1d0e9f8a7_add_version_render_fields.py  b7d4e2f1a9c3_add_user_token_version.py  c4e7b2a9d150_create_users.py  c7e2a9f4b3d1_create_eval_tables.py  d2f5a8c1e394_promotion_gate.py  d8f3a1b6c024_eval_runs_multi_scorer.py  e1a47c2b9f53_create_traces_table.py  f3b8c1d24e60_create_blocks_block_versions.py
api/scripts/: seed_demo_data.py
api/src/promptforge_api/: __init__.py  authz.py  cache.py  celery_client.py  config.py  enqueue.py  errors.py  exceptions.py  logging_config.py  main.py  middleware.py  observability.py  pricing.json  pricing.py  promotion.py  ratelimit.py  schemas.py  security.py  security_gate.py  templating.py  tokens.py
api/src/promptforge_api/composition/: __init__.py  builder.py  graph.py  resolver.py
api/src/promptforge_api/db/: __init__.py  audit_models.py  base.py  block_models.py  composition_models.py  engine.py  eval_models.py  models.py  promotion_models.py  scan_models.py  trace_models.py  user_models.py
api/src/promptforge_api/evals/: __init__.py  errors.py  llm_judge.py  scorer.py
api/src/promptforge_api/gateway/: __init__.py  errors.py  gateway.py  schemas.py
api/src/promptforge_api/repositories/: __init__.py  audit.py  blocks.py  composition.py  evals.py  metrics.py  overview.py  promotion.py  prompts.py  scans.py  traces.py  users.py
api/src/promptforge_api/routers/: __init__.py  _mappers.py  alerts.py  audit.py  auth.py  blocks.py  datasets.py  gateway.py  health.py  metrics.py  ops.py  overview.py  prompts.py  traces.py
api/src/promptforge_api/scanning/: __init__.py  finding.py  scanner.py
api/src/promptforge_api/services/: __init__.py  alerts.py  auth.py  blocks.py  evals.py  metrics.py  overview.py  promotion.py  prompts.py  queues.py  scans.py  traces.py
api/tests/: conftest.py  fakes.py  test_alerts.py  test_audit_log.py  test_audit_trail.py  test_auth.py  test_authz.py  test_blocks.py  test_celery_contract.py  test_composition.py  test_composition_graph.py  test_composition_resolver.py  test_contract_sdk.py  test_datasets.py  test_eval_models.py  test_eval_runs.py  test_evals_judge.py  test_gateway.py  test_gateway_resilience.py  test_gateway_streaming.py  test_hardening.py  test_health.py  test_metrics.py  test_models_endpoint.py  test_overview.py  test_pricing.py  test_promotion.py  test_promotion_gate.py  test_promotion_security_gate.py  test_promotion_security_gate_http.py  test_prompts.py  test_queues.py  test_ratelimit.py  test_render_cache.py  test_scan_models.py  test_scan_on_save.py  test_scan_runs.py  test_scanning_finding.py  test_scans_service.py  test_security.py  (+5 more)
sdk/: pyproject.toml
sdk/src/promptforge/: __init__.py  cache.py  client.py  errors.py  models.py
sdk/tests/: test_cache.py  test_client.py  test_fallback.py  test_record_trace.py
ui/: .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/e2e/: admin-rbac.spec.ts  auth-flow.spec.ts  blocks.spec.ts  complete-workflow.spec.ts  datasets.spec.ts  demo-tour.spec.ts  helpers.ts  promote.spec.ts  responsive-sweep.spec.ts  sprint15-flows.spec.ts  sprint16-smoke.spec.ts  traces-runs.spec.ts  ux-content.spec.ts  ux-review.spec.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/components/: AlertsPanel.test.tsx  AlertsPanel.tsx  AppLayout.test.tsx  AppLayout.tsx  BlockEditorForm.test.tsx  BlockEditorForm.tsx  CacheTile.test.tsx  CacheTile.tsx  CompositionEditor.test.tsx  CompositionEditor.tsx  CopyButton.test.tsx  CopyButton.tsx  CreateUserDialog.test.tsx  CreateUserDialog.tsx  DashboardHeader.test.tsx  DashboardHeader.tsx  DatasetEditorForm.test.tsx  DatasetEditorForm.tsx  DeleteBlockDialog.test.tsx  DeleteBlockDialog.tsx  DeleteDatasetDialog.test.tsx  DeleteDatasetDialog.tsx  DiffView.test.tsx  DiffView.tsx  DisabledTooltip.tsx  EditUserRoleDialog.test.tsx  EditUserRoleDialog.tsx  EmptyState.tsx  EvalPanel.test.tsx  EvalPanel.tsx  EvalRunsList.test.tsx  EvalRunsList.tsx  EvalSummaryView.tsx  FreshnessIndicator.tsx  GoldenSetSelect.test.tsx  GoldenSetSelect.tsx  InfoHint.tsx  MetricsWindowToggle.tsx  ObservabilityPanel.test.tsx  ObservabilityPanel.tsx  (+32 more)
ui/src/lib/: api.test.ts  api.ts  csv.test.ts  csv.ts  diff.test.ts  diff.ts  nav.ts  polling.test.ts  polling.ts  queryClient.ts  sse.test.ts  sse.ts  streaming.test.ts  streaming.ts  toast.ts  utils.ts
ui/src/pages/: ActivityPage.test.tsx  ActivityPage.tsx  BlockDetailPage.test.tsx  BlockDetailPage.tsx  BlockEditorPage.test.tsx  BlockEditorPage.tsx  BlockListPage.tsx  DashboardPage.tsx  DatasetEditorPage.tsx  DatasetListPage.tsx  LoginPage.tsx  OperationsPage.test.tsx  OperationsPage.tsx  OverviewPage.test.tsx  OverviewPage.tsx  PlaygroundPage.test.tsx  PlaygroundPage.tsx  PromptEditorPage.test.tsx  PromptEditorPage.tsx  (+12 more)
worker/: Dockerfile  pyproject.toml
worker/src/promptforge_worker/: __init__.py  celery_app.py  config.py  db.py  errors.py  logging_config.py  signals.py  tasks.py
worker/src/promptforge_worker/evals/: __init__.py  deepeval_scorer.py  gateway_llm.py  ragas_scorer.py  registry.py  runner.py
worker/src/promptforge_worker/scanning/: __init__.py  injection_scanner.py  jailbreak_scanner.py  pii_scanner.py  registry.py  runner.py  secret_scanner.py
worker/tests/: conftest.py  test_eval_run_broker.py  test_eval_run_integration.py  test_evals_adapters.py  test_routing.py  test_scan_run_integration.py  test_scanner_injection.py  test_scanner_jailbreak.py  test_scanner_pii.py  test_scanner_secret.py  test_signals.py  test_trace_ingest.py  test_webhook.py
(+86 files in other folders)
