[project]
name = "promptforge-api"
version = "0.1.0"
description = "PromptForge API service (FastAPI)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "jsonschema>=4.23",
    # One internal interface in front of every model provider (CLAUDE.md, part 5).
    # The gateway wraps this; nothing else in the codebase imports litellm directly.
    "litellm>=1.50",
    # Retry-with-backoff for the gateway's resilient call path (ADR 0006).
    "tenacity>=9.0",
    # Server-side hot-prompt cache (Sprint 5). Sync client to match the sync DB stack
    # (ADR 0003); handlers run in a threadpool, so a blocking Redis call is fine.
    "redis>=5.0",
    # Celery *client* only (Sprint 6): the API is a producer — it enqueues tasks by name
    # via send_task and reads results by id. It does NOT depend on promptforge-worker, so
    # the worker's future heavy deps (eval libs, scanners) never leak into the API image.
    "celery[redis]>=5.4",
    # Human auth (Sprint 13 / ADR 0018): PyJWT signs/verifies HS256 access+refresh tokens
    # (maintained, avoids the python-jose algorithm-confusion CVEs); bcrypt hashes passwords.
    # We use bcrypt directly — passlib is unmaintained and breaks on bcrypt 5.x.
    "pyjwt>=2.10",
    "bcrypt>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptforge_api"]
