[project]
name = "promptforge"
version = "0.1.0"
description = "PromptForge Python client SDK (caching + last-known-good fallback)."
requires-python = ">=3.13"
# Deliberately lean: the SDK is imported into other apps, so it must NOT pull in
# FastAPI/Celery. Its one runtime dep is httpx — a small, well-behaved HTTP client
# with sane timeouts and connection pooling (see the SDK HTTP-lib decision, Sprint 5).
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptforge"]
